Fix text overflow in cartridge info

--- a/www/src/app/cartridge-info/cartridge-info.scss
+++ b/www/src/app/cartridge-info/cartridge-info.scss
@@ -2,7 +2,7 @@
 @import "../../style/variables";
 
 $height: 200px;
-$width: 200px;
+$width: 230px;
 $border-size: 2px;
 $border-radius: 10px;
 $border-color: #ddd;
@@ -20,7 +20,7 @@ $scooped-corner-height: math.div($height, 10);
     transition: top 500ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
 
     &.loaded {
-        top: 80px;
+        top: 45px;
     }
 
     &:after {
